y
Traceback (most recent call last):
  File "/home/jan/project_embeddings/tests/test_logger_py.py", line 35, in <module>
    from src.common.logger import get_logger, get_phase_logger
  File "/home/jan/project_embeddings/src/common/logger.py", line 179
    ```
    ^
SyntaxError: invalid syntax
